# evolution-benchmark

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_build.sh
.github/workflows/: msvc.yaml
benchmark/: CMakeLists.txt
benchmark/inc/waverian/benchmark/: benchmark.h  printers.h
benchmark/inc/waverian/benchmark/details/: constants.h  error_code.h  types.h
benchmark/src/: benchmark.c  constants.c  platform.c  platform.h  thread.c  thread.h
benchmark/src/core/: core.c  core.h  platform.h
benchmark/src/printers/: html.c  html_generated.c  text.c
benchmark/utils/: report_template.html  template_processor.py
benchmark_cli/: CMakeLists.txt  main.c
benchmark_cli/src/: app.c  app.h
bindings/python/: evolution_benchmark.pyx  pyproject.toml  setup.py
cmake/: compiler.cmake  definitions.cmake  iOS.cmake  options.cmake
compiler_probes/: posix_cpuid.c  posix_threads.c  unistd.c  win_cpuid.c  win_threads.c
lfk_benchmark/: CMakeLists.txt
lfk_benchmark/core/: CMakeLists.txt
lfk_benchmark/core/inc/: lfk_core.h
lfk_benchmark/core/src/: lfk_core.c  platform.h
lfk_benchmark/inc/: lfk.h
lfk_benchmark/inc/lfk/: constants.h  lfk.h
lfk_benchmark/src/: constants.c  lfk.c  platform.h  thread.h
lfk_benchmark/src/core/: lfk_core.c  platform.h
lfk_benchmark/src/posix/: platform.c  thread.c
lfk_benchmark/src/win/: platform.c  thread.c
lfk_benchmark/types/: CMakeLists.txt
lfk_benchmark/types/inc/lfk/: types.h
lfk_console/: CMakeLists.txt  main.c
lfk_console/src/: app.c  app.h
lfk_console/src/utils/: html_report_generator.c  html_report_generator.h  text_report_generator.c  text_report_generator.h
lfk_console/utils/: html_to_c_string_variable.sh  report_html_template.html
lib/: CMakeLists.txt
lib/inc/waverian/: evolution_benchmark.h
lib/inc/waverian/evolution_benchmark/: constants.h  error_code.h  printers.h  types.h
lib/src/: constants.c  evolution_benchmark.c  platform.c  platform.h  thread.c  thread.h
lib/src/core/: core.c  core.h  platform.h
lib/src/printers/: html.c  html_generated.c  text.c
lib/utils/: report_template.html  template_processor.py
python/: evolution_benchmark.pyx  pyproject.toml  setup.py  test.py
python/tools/: build_wheel.sh
tools/: build.sh  build_python.sh  common.sh  generate_release.sh  generate_release_linux.sh  generate_release_win.sh
